--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -89,5 +89,37 @@
     .projectFilterContainer{
         position: relative;
     }
+
+
+
+
+
+    // styles for the project cards
+    .projectsSection{
+        width:100%;
+        max-width: 400px;
+        margin: 0 auto;
+        margin-top: 2rem;
+
+        display: grid;
+        justify-items: center; 
+        align-items: center;
+
+        grid-template-columns: 1fr;
+        gap: 1rem;
+    }
+
+    .projectCard{
+        // max-width: 260px;
+        .projectIMGContainer{
+            // max-width: 260px;
+            // height: 200px;
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
 }
 
