--- a/styles/main.css
+++ b/styles/main.css
@@ -92,6 +92,7 @@ html {
 .navbar {
   backdrop-filter: blur(8px);
   -webkit-backdrop-filter: blur(8px);
+  border-bottom: 1px solid var(--accentColor);
 }
 
 .navbarContent {
@@ -527,6 +528,22 @@ html {
 #portfolioSection .projectFilterContainer {
   position: relative;
 }
+#portfolioSection .projectsSection {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  margin-top: 2rem;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+#portfolioSection .projectCard .projectIMGContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 @media (min-width: 22.5rem) {
   :root {
@@ -550,6 +567,12 @@ html {
   .mobileLinksContent {
     padding-left: 2.5rem;
     padding-right: 2.5rem;
+  }
+}
+@media (min-width: 36rem) {
+  #portfolioSection .projectsSection {
+    max-width: 600px;
+    grid-template-columns: 1fr 1fr;
   }
 }
 @media (min-width: 640px) {
@@ -647,6 +670,14 @@ html {
   }
   #experienceSection .rightSection {
     flex: 1;
+  }
+  #portfolioSection {
+    margin-top: 0;
+    padding-top: 4rem;
+  }
+  #portfolioSection .projectsSection {
+    max-width: 850px;
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
 @media (min-width: 62rem) {
