added no projects msg

--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -107,14 +107,24 @@
 
         grid-template-columns: 1fr;
         gap: 1rem;
+        position: relative;
+    }
+
+    .noProjectsMsg{
+        position: absolute;
+        top: 2vh;
+        font-size: var(--tagFontSize);
+        color:var(--guideColor) ;
+        display: block;
+        width: 100%;
+        text-align: center;
     }
 
     .projectCard{
-        // max-width: 260px;
         .projectIMGContainer{
-            // max-width: 260px;
-            // height: 200px;
             img{
+            border-radius: 10px;
+
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
