--- a/styles/main.css
+++ b/styles/main.css
@@ -490,6 +490,7 @@ html {
 }
 #portfolioSection .categoryList {
   position: absolute;
+  z-index: 100;
   top: 2.8rem;
   left: 0;
   right: 0;
@@ -554,6 +555,80 @@ html {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+#portfolioSection .projectCard .projectTitle {
+  color: var(--textHeadingColor);
+  font-weight: 600;
+  font-size: var(--blockTextFontSize);
+}
+#portfolioSection .projectCard .projectType {
+  font-size: var(--blockTextFontSize);
+  color: var(--textColor);
+  font-weight: 400;
+}
+#portfolioSection .projectCard .projectLinks {
+  margin-top: 0.8rem;
+}
+#portfolioSection .projectCard .projectLinks a {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
+  font-size: var(--buttonFontSize);
+  transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
+  font-size: 12px;
+}
+#portfolioSection .projectCard .projectLinks a svg {
+  transform: rotate(-40deg);
+  margin-left: 0.2rem;
+  width: 17px;
+  height: 17px;
+  transition: transform 0.3s ease;
+}
+#portfolioSection .projectCard .projectLinks a svg path {
+  stroke: var(--buttonTextColor);
+  transition: transform 0.4s ease, stroke 0.4s ease;
+}
+#portfolioSection .projectCard .projectLinks a:hover {
+  transform: scale(0.9);
+}
+#portfolioSection .projectCard .projectLinks a:hover svg {
+  transform: rotate(0);
+}
+#portfolioSection .projectCard .projectLinks button {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
+  font-size: var(--buttonFontSize);
+  transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
+  font-size: 12px;
+  margin-left: 0.5rem;
+  border: 1px solid var(--buttonColor);
+  background: none;
+  color: var(--buttonColor);
+  cursor: pointer;
+}
+#portfolioSection .projectCard .projectLinks button svg {
+  transform: rotate(-40deg);
+  margin-left: 0.2rem;
+  width: 17px;
+  height: 17px;
+  transition: transform 0.3s ease;
+}
+#portfolioSection .projectCard .projectLinks button svg path {
+  stroke: var(--buttonTextColor);
+  transition: transform 0.4s ease, stroke 0.4s ease;
+}
+#portfolioSection .projectCard .projectLinks button:hover {
+  transform: scale(0.9);
+}
+#portfolioSection .projectCard .projectLinks button:hover svg {
+  transform: rotate(0);
 }
 
 @media (min-width: 22.5rem) {
