added staggering animation when projects render

--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -107,7 +107,7 @@
         align-items: center;
 
         grid-template-columns: 1fr;
-        gap: 1rem;
+        gap: 1.5rem;
         position: relative;
     }
 
@@ -122,6 +122,9 @@
     }
 
     .projectCard{
+        opacity: 0;
+        transform: translateY(20px);
+        transition: opacity 0.5s ease, transform 0.5s ease;
         .projectIMGContainer{
             img{
                 border-radius: 10px;
@@ -158,6 +161,11 @@
                 cursor: pointer;
             }
         }
+    }
+
+    .projectCardShow{
+        opacity: 1;
+        transform: translateY(0);
     }
 }
 
