--- a/styles/main.scss
+++ b/styles/main.scss
@@ -13,4 +13,7 @@
 // portfolio section styles
 @import 'portfolioSection';
 
+// contact section styles
+@import 'contactSection';
+
 @import 'responsive';
