--- a/styles/main.css
+++ b/styles/main.css
@@ -86,7 +86,7 @@ a {
   }
 }
 html {
-  margin-bottom: 10000px;
+  margin-bottom: 60px;
 }
 
 .navbar {
@@ -665,6 +665,64 @@ html {
 }
 #contactSection .socialLinks a i {
   margin-right: 0.3rem;
+}
+#contactSection #contactForm {
+  max-width: 300px;
+  margin: 3rem auto 6rem auto;
+}
+#contactSection .formInput {
+  display: flex;
+  flex-direction: column;
+}
+#contactSection #submitBtn {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 8px;
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
+  font-size: var(--buttonFontSize);
+  transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
+  border: none;
+  cursor: pointer;
+}
+#contactSection #submitBtn svg {
+  transform: rotate(-40deg);
+  margin-left: 0.2rem;
+  width: 17px;
+  height: 17px;
+  transition: transform 0.3s ease;
+}
+#contactSection #submitBtn svg path {
+  stroke: var(--buttonTextColor);
+  transition: transform 0.4s ease, stroke 0.4s ease;
+}
+#contactSection #submitBtn:hover {
+  transform: scale(0.9);
+}
+#contactSection #submitBtn:hover svg {
+  transform: rotate(0);
+}
+#contactSection label {
+  color: var(--textHeadingColor);
+  font-size: var(--subHeadingFontSize);
+}
+#contactSection input, #contactSection textarea {
+  background: var(--accentColor);
+  border: none;
+  border-radius: 10px;
+  padding: 0.5rem 1rem;
+  margin-bottom: 1rem;
+  transition: border-color 0.3s ease;
+  color: var(--textHeadingColor);
+}
+#contactSection input:focus, #contactSection textarea:focus {
+  outline: none;
+  border-color: red;
+}
+#contactSection input:-webkit-autofill {
+  -webkit-box-shadow: 0 0 0px 1000px var(--accentColor) inset !important;
+  -webkit-text-fill-color: var(--textHeadingColor) !important;
 }
 
 @media (min-width: 22.5rem) {
