small change to textarea

--- a/styles/_contactSection.scss
+++ b/styles/_contactSection.scss
@@ -55,6 +55,7 @@
         margin-bottom: 1rem;
         transition: border-color 0.3s ease;
         color: var(--textHeadingColor);
+        resize: none;
         &:focus{
             outline: none;
             border-color: red;
