--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -189,6 +189,10 @@
 
         }
     }
+    #contactSection{
+        margin-top: 0;
+        padding-top: 4rem;
+    }
 }
 
 @media (min-width: $sz5){// 992px
@@ -213,6 +217,15 @@
     }
 
     #portfolioSection{
+    }
+
+    #contactSection{
+        .socialLinks{
+            flex-direction: row;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
     }
     
 }
