--- a/styles/_contactSection.scss
+++ b/styles/_contactSection.scss
@@ -27,7 +27,7 @@
     }
 
     #contactForm{
-        max-width: 300px;
+        max-width: 18.75rem;
         margin: 3rem auto 6rem auto;
     }
 
