--- a/styles/_mainSection.scss
+++ b/styles/_mainSection.scss
@@ -20,10 +20,10 @@
     // left section
     .location{
         display: flex;
-        margin-top: -7px;
-        margin-bottom: 10px;
+        margin-top: -0.4375rem;
+        margin-bottom: 0.625rem;
         svg{
-            $svgSize: 15px;
+            $svgSize: 0.9375rem;
             width: $svgSize;
             height: $svgSize;
 
@@ -46,13 +46,13 @@
         display: flex;
         color: var(--tagTextColor);
         font-size: var(--tagFontSize);        
-        margin-bottom: 20px;
+        margin-bottom: 1.25rem;
         transition: color $transitionDuration ease;
 
         .tag{
             background: var(--accentColor);
             padding: 0.5rem 1rem;
-            border-radius: 8px;
+            border-radius: 0.5rem;
             transition: background $transitionDuration ease;
             &:nth-child(1){
                 margin-right: 0.5rem;
@@ -64,12 +64,12 @@
         color: var(--textColor);
         transition: color $transitionDuration ease;
         font-size: var(--blockTextFontSize);
-        max-width: 490px;
+        max-width: 30.625rem;
     }
 
     .viewProjectsCTA{
         @include buttonStyles;
-        margin-top: 25px;
+        margin-top: 1.5625rem;
     }
 
 
@@ -80,7 +80,7 @@
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        margin-top: 4rem; //gap for mobile view
+        margin-top: 6rem; //gap for mobile view
     }
 
 
@@ -101,8 +101,8 @@
         padding: 1rem 1.5rem;
 
         width: min-content;
-        min-width: 100px;
-        max-height: 90px;
+        min-width: 6.25rem;
+        max-height: 5.625rem;
 
         -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.8);
         -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB),0.8);
