--- a/styles/main.css
+++ b/styles/main.css
@@ -208,12 +208,12 @@ html {
 }
 #mainSection .location {
   display: flex;
-  margin-top: -7px;
-  margin-bottom: 10px;
+  margin-top: -0.4375rem;
+  margin-bottom: 0.625rem;
 }
 #mainSection .location svg {
-  width: 15px;
-  height: 15px;
+  width: 0.9375rem;
+  height: 0.9375rem;
 }
 #mainSection .location svg path {
   stroke: var(--textColor);
@@ -230,13 +230,13 @@ html {
   display: flex;
   color: var(--tagTextColor);
   font-size: var(--tagFontSize);
-  margin-bottom: 20px;
+  margin-bottom: 1.25rem;
   transition: color 0.4s ease;
 }
 #mainSection .skillTags .tag {
   background: var(--accentColor);
   padding: 0.5rem 1rem;
-  border-radius: 8px;
+  border-radius: 0.5rem;
   transition: background 0.4s ease;
 }
 #mainSection .skillTags .tag:nth-child(1) {
@@ -246,7 +246,7 @@ html {
   color: var(--textColor);
   transition: color 0.4s ease;
   font-size: var(--blockTextFontSize);
-  max-width: 490px;
+  max-width: 30.625rem;
 }
 #mainSection .viewProjectsCTA {
   display: inline-flex;
@@ -257,7 +257,7 @@ html {
   color: var(--buttonTextColor);
   font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
-  margin-top: 25px;
+  margin-top: 1.5625rem;
 }
 #mainSection .viewProjectsCTA svg {
   transform: rotate(-40deg);
@@ -281,7 +281,7 @@ html {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  margin-top: 4rem;
+  margin-top: 6rem;
 }
 #mainSection .rightSectionContent {
   display: grid;
@@ -297,8 +297,8 @@ html {
   border-radius: 10px;
   padding: 1rem 1.5rem;
   width: min-content;
-  min-width: 100px;
-  max-height: 90px;
+  min-width: 6.25rem;
+  max-height: 5.625rem;
   -webkit-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
   -moz-box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
   box-shadow: 3px 10px 28px 0px rgba(var(--backgroundColorRGB), 0.8);
@@ -457,7 +457,7 @@ html {
 #portfolioSection {
   padding: 0 1.5rem;
   margin-top: 5rem;
-  min-height: 800px;
+  min-height: 50rem;
 }
 #portfolioSection .sectionTitle {
   text-align: center;
@@ -466,7 +466,7 @@ html {
   background: var(--accentColor);
   color: var(--tagTextColor);
   width: 100%;
-  max-width: 300px;
+  max-width: 18.75rem;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -479,8 +479,8 @@ html {
   cursor: pointer;
 }
 #portfolioSection .dropdownListBtn svg {
-  height: 16px;
-  width: 16px;
+  height: 1rem;
+  width: 1rem;
   transition: transform 0.5 ease;
 }
 #portfolioSection .dropdownListBtn svg path {
@@ -495,7 +495,7 @@ html {
   top: 2.8rem;
   left: 0;
   right: 0;
-  max-width: 300px;
+  max-width: 18.75rem;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -532,7 +532,7 @@ html {
 }
 #portfolioSection .projectsSection {
   width: 100%;
-  max-width: 400px;
+  max-width: 25rem;
   margin: 0 auto;
   margin-top: 2rem;
   display: grid;
@@ -584,7 +584,7 @@ html {
   color: var(--buttonTextColor);
   font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
-  font-size: 12px;
+  font-size: 0.75rem;
 }
 #portfolioSection .projectCard .projectLinks a svg {
   transform: rotate(-40deg);
@@ -612,7 +612,7 @@ html {
   color: var(--buttonTextColor);
   font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
-  font-size: 12px;
+  font-size: 0.75rem;
   margin-left: 0.5rem;
   border: 1px solid var(--buttonColor);
   background: none;
@@ -667,7 +667,7 @@ html {
   margin-right: 0.3rem;
 }
 #contactSection #contactForm {
-  max-width: 300px;
+  max-width: 18.75rem;
   margin: 3rem auto 6rem auto;
 }
 #contactSection .formInput {
@@ -735,12 +735,12 @@ html {
     --buttonFontSize: 0.875rem;
   }
   #mainSection .location svg {
-    width: 16px;
-    height: 16px;
+    width: 1rem;
+    height: 1rem;
   }
   #mainSection .viewProjectsCTA svg {
-    width: 19px;
-    height: 19px;
+    width: 1.1875rem;
+    height: 1.1875rem;
   }
   #mainSection .rightSectionContent {
     grid-template-columns: repeat(3, 1fr);
@@ -752,7 +752,7 @@ html {
 }
 @media (min-width: 36rem) {
   #portfolioSection .projectsSection {
-    max-width: 600px;
+    max-width: 37.5rem;
     grid-template-columns: 1fr 1fr;
   }
 }
@@ -761,7 +761,7 @@ html {
     display: none;
   }
   #portfolioSection .categoryList {
-    max-width: 500px;
+    max-width: 31.25rem;
     position: static;
     opacity: 1;
     pointer-events: all;
@@ -846,22 +846,22 @@ html {
     margin-left: 0;
   }
   #experienceSection .expTitleContainer {
-    min-width: 400px;
+    min-width: 25rem;
     align-items: flex-start;
   }
   #experienceSection .rightSection {
     flex: 1;
   }
   #portfolioSection {
-    margin-top: 0;
+    margin-top: 4rem;
     padding-top: 4rem;
   }
   #portfolioSection .projectsSection {
-    max-width: 850px;
+    max-width: 53.125rem;
     grid-template-columns: 1fr 1fr 1fr;
   }
   #contactSection {
-    margin-top: 0;
+    margin-top: 4rem;
     padding-top: 4rem;
   }
 }
@@ -898,11 +898,11 @@ html {
     --subHeadingFontSize: 1.25rem;
   }
   #mainSection .aboutMeText {
-    max-width: 400px;
+    max-width: 25rem;
   }
   #mainSection .langCard {
     padding: 2rem 2.5rem;
-    min-width: 120px;
+    min-width: 7.5rem;
   }
 }
 @media (min-width: 87.5rem) {
