removed min height on portfolio section

--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -1,7 +1,7 @@
 #portfolioSection{
     padding: 0 1.5rem;
     margin-top: 5rem;
-    min-height: 50rem;
+    // min-height: 50rem;
 
     .sectionTitle{
         text-align: center;
