--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -254,6 +254,7 @@
     #mainSection{
         .watermark{
             bottom: -1rem;
+            left: -5rem;
             .text{
                 font-size: 150px;
             }
