--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -200,7 +200,7 @@
 
     #mainSection{
         .watermark{
-            bottom: 2rem;
+            // bottom: 2rem;
             .text{
                 font-size: 150px;
             }
@@ -253,7 +253,7 @@
     }
     #mainSection{
         .watermark{
-            bottom: -1rem;
+            // bottom: -1rem;
             left: -5rem;
             .text{
                 font-size: 150px;
