--- a/styles/_experienceSection.scss
+++ b/styles/_experienceSection.scss
@@ -26,7 +26,7 @@
         position: relative;
         margin-left: 0.5rem;
         &::before{
-            background: var(--guideColor);
+            background: var(--primaryColor);
             position: absolute;
             content: '';
             width: 2px;
@@ -43,7 +43,7 @@
         position: relative;
         &::before{
             border-radius: 50px;
-            border: var(--guideColor) 2px solid;
+            border: var(--primaryColor) 2px solid;
             background: var(--backgroundColor);
 
             transition: background $transitionDuration ease, border $transitionDuration ease;
@@ -71,7 +71,7 @@
         color: var(--tagTextColor); 
 
         padding: 0.3rem 1rem;
-        border-radius: 8px;
+        border-radius: 3.125rem;
         transition: background $transitionDuration ease, color $transitionDuration ease;
         &:nth-child(1){
             margin-right: 0.3rem;
