--- a/styles/_portfolioSection.scss
+++ b/styles/_portfolioSection.scss
@@ -21,7 +21,7 @@
         justify-content: space-between;
         
         border: none;
-        border-radius: 10px;
+        border-radius: 3.125rem;
         padding: 0.75rem 1rem;
 
         font-size: var(--buttonFontSize);
@@ -73,7 +73,7 @@
             text-align: left;
             background: none;
             border: none;
-            border-radius: 10px;
+            border-radius: 3.125rem;
             color: var(--tagTextColor);
             font-size: var(--buttonFontSize);
             transition: background 0.3s ease-in-out;
