--- a/styles/main.css
+++ b/styles/main.css
@@ -800,6 +800,39 @@ body {
   -webkit-text-fill-color: var(--textHeadingColor) !important;
 }
 
+.modal {
+  z-index: 999;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  height: 90%;
+  width: 98%;
+  background: red;
+  border-radius: 10px 10px 0 0;
+  opacity: 0;
+  pointer-events: none;
+  transform: translateY(20px) translateX(1%);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+#overlay {
+  z-index: 998;
+  position: fixed;
+  top: 0;
+  height: 100vh;
+  width: 100vw;
+  background: var(--backgroundColor);
+  opacity: 0;
+  pointer-events: none;
+  transition: opacity 0.3s ease;
+}
+
+.modalShow {
+  opacity: 1;
+  transform: translateY(0) translateX(1%);
+  pointer-events: all;
+}
+
 @media (min-width: 22.5rem) {
   :root {
     --headingFontSize: 2.5rem;
@@ -878,6 +911,8 @@ body {
     left: 0;
   }
   #mainSection {
+    min-height: initial;
+    height: 100vh;
     padding-top: 13rem;
     display: flex;
     align-items: flex-start;
