--- a/styles/main.scss
+++ b/styles/main.scss
@@ -16,4 +16,9 @@
 // contact section styles
 @import 'contactSection';
 
+
+// modal styles
+@import 'modal';
+
+// responsive styles
 @import 'responsive';
