--- a/styles/main.css
+++ b/styles/main.css
@@ -807,12 +807,20 @@ body {
   left: 0;
   height: 90%;
   width: 98%;
-  background: red;
+  background: var(--accentColor);
   border-radius: 10px 10px 0 0;
   opacity: 0;
   pointer-events: none;
-  transform: translateY(20px) translateX(1%);
-  transition: opacity 0.3s ease, transform 0.3s ease;
+  transform: translateY(40px) translateX(1%);
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+.modal #modalExitBtn {
+  cursor: pointer;
+  float: right;
+  margin: 0.5rem;
+}
+.modal #modalExitBtn path {
+  stroke: var(--textHeadingColor);
 }
 
 #overlay {
