--- a/styles/main.css
+++ b/styles/main.css
@@ -813,14 +813,90 @@ body {
   pointer-events: none;
   transform: translateY(40px) translateX(1%);
   transition: opacity 0.4s ease, transform 0.4s ease;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 0 0.5rem;
 }
 .modal #modalExitBtn {
   cursor: pointer;
   float: right;
-  margin: 0.5rem;
+  padding: 0.5rem 0 0 0;
+  transition: transform 0.3s ease;
+}
+.modal #modalExitBtn svg {
+  width: 24px;
+  height: 24px;
 }
 .modal #modalExitBtn path {
   stroke: var(--textHeadingColor);
+}
+.modal #modalExitBtn:hover {
+  transform: scale(0.9);
+}
+.modal .modalContent {
+  max-width: 1024px;
+  margin: 3rem auto 0 auto;
+  text-align: center;
+}
+
+.projectMainInfo .tagsBtnsSection {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 1rem;
+}
+.projectMainInfo .tagsBtnsSection p {
+  color: var(--textColor);
+  font-size: var(--tagFontSize);
+  margin-bottom: 0.3rem;
+}
+.projectMainInfo .tagsBtnsSection ul {
+  list-style-type: none;
+  display: flex;
+  gap: 0.5rem;
+}
+.projectMainInfo .tagsBtnsSection ul li {
+  background: var(--backgroundColor);
+  color: var(--tagTextColor);
+  padding: 0.3rem 0.8rem;
+  font-size: var(--tagFontSize);
+  border-radius: 50px;
+}
+.projectMainInfo .projLinks a {
+  display: inline-flex;
+  align-items: center;
+  padding: 0.5rem 1rem;
+  border-radius: 3.125rem;
+  background: var(--buttonColor);
+  color: var(--buttonTextColor);
+  font-size: var(--buttonFontSize);
+  transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
+}
+.projectMainInfo .projLinks a svg {
+  transform: rotate(-40deg);
+  margin-left: 0.2rem;
+  width: 17px;
+  height: 17px;
+  transition: transform 0.3s ease;
+}
+.projectMainInfo .projLinks a svg path {
+  stroke: var(--buttonTextColor);
+  transition: transform 0.4s ease, stroke 0.4s ease;
+}
+.projectMainInfo .projLinks a:hover {
+  transform: scale(0.9);
+}
+.projectMainInfo .projLinks a:hover svg {
+  transform: rotate(0);
+}
+.projectMainInfo .imgContainer img {
+  width: 300px;
+  margin: 0 auto;
+}
+.projectMainInfo .projectDescription {
+  color: var(--textColor);
+  font-size: var(--blockTextFontSize);
 }
 
 #overlay {
@@ -833,6 +909,7 @@ body {
   opacity: 0;
   pointer-events: none;
   transition: opacity 0.3s ease;
+  cursor: pointer;
 }
 
 .modalShow {
