testing different font sizes for heading

--- a/styles/_config.scss
+++ b/styles/_config.scss
@@ -18,6 +18,7 @@
     --tagTextColor: #ffffff; //text color for tag
     --textHeadingColor: #ffff; //text color for headings
 
+    --modalHeadingFontSize:  1.5rem; //modal heading font size 20px
     --headingFontSize: 2.188rem; //35px initial value
     --blockTextFontSize: 0.75rem; //12 px
     --tagFontSize: 0.688rem; //11px
