--- a/styles/main.css
+++ b/styles/main.css
@@ -808,7 +808,7 @@ body {
   left: 0;
   height: 90%;
   width: 98%;
-  background: var(--accentColor);
+  background: var(--backgroundColor);
   border-radius: 10px 10px 0 0;
   opacity: 0;
   pointer-events: none;
@@ -863,7 +863,7 @@ body {
   gap: 0.5rem;
 }
 .projectMainInfo .tagsBtnsSection ul li {
-  background: var(--backgroundColor);
+  background: var(--accentColor);
   color: var(--tagTextColor);
   padding: 0.3rem 0.8rem;
   font-size: var(--tagFontSize);
@@ -899,6 +899,7 @@ body {
 .projectMainInfo .imgContainer img {
   width: 300px;
   margin: 0 auto;
+  border-radius: 10px;
 }
 .projectMainInfo .projectDescription {
   color: var(--textColor);
