--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -38,9 +38,8 @@
     }
 
     .modalContent{
-        // background: red;
         max-width: 1024px;
-        margin: 3rem auto 0 auto;
+        margin: 3rem auto;
         text-align: center;
 
         .modalTitle{
@@ -84,12 +83,20 @@
     .projLinks{
         a{
             @include buttonStyles;
+            margin-right: 0.5rem;
+
         }
     }
 
     .imgContainer{
+        max-width: 800px;
+        margin: 0 auto; 
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
         img{
-            width: 300px;
+            
+            width: 100%;
             margin: 0 auto;
             border-radius: 10px;
         }
@@ -97,7 +104,8 @@
     .projectDescription{
         color: var(--textColor);
         font-size: var(--blockTextFontSize);
-        margin: 1rem 0;
+        margin: 1rem 0 2rem 0;
+        max-width: 500px;
     }
 }
 
