--- a/styles/_responsive.scss
+++ b/styles/_responsive.scss
@@ -199,6 +199,19 @@
         margin-top: 4rem;
         padding-top: 4rem;
     }
+
+    // modal responsive styles
+    .modal{
+        .modalContent{
+            text-align: left;
+        }
+    }
+
+    .projectMainInfo{
+        .tagsBtnsSection{
+            flex-direction: row;
+        }
+    }
 }
 
 @media (min-width: $sz5){// 992px
