--- a/styles/main.css
+++ b/styles/main.css
@@ -836,7 +836,7 @@ body {
 }
 .modal .modalContent {
   max-width: 1024px;
-  margin: 3rem auto 0 auto;
+  margin: 3rem auto;
   text-align: center;
 }
 .modal .modalContent .modalTitle {
@@ -878,6 +878,7 @@ body {
   color: var(--buttonTextColor);
   font-size: var(--buttonFontSize);
   transition: transform 0.3s ease, color 0.4s ease, background 0.4s ease;
+  margin-right: 0.5rem;
 }
 .projectMainInfo .projLinks a svg {
   transform: rotate(-40deg);
@@ -896,15 +897,23 @@ body {
 .projectMainInfo .projLinks a:hover svg {
   transform: rotate(0);
 }
+.projectMainInfo .imgContainer {
+  max-width: 800px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
 .projectMainInfo .imgContainer img {
-  width: 300px;
+  width: 100%;
   margin: 0 auto;
   border-radius: 10px;
 }
 .projectMainInfo .projectDescription {
   color: var(--textColor);
   font-size: var(--blockTextFontSize);
-  margin: 1rem 0;
+  margin: 1rem 0 2rem 0;
+  max-width: 500px;
 }
 
 #overlay {
@@ -1068,6 +1077,12 @@ body {
   #contactSection {
     margin-top: 4rem;
     padding-top: 4rem;
+  }
+  .modal .modalContent {
+    text-align: left;
+  }
+  .projectMainInfo .tagsBtnsSection {
+    flex-direction: row;
   }
 }
 @media (min-width: 62rem) {
